exp2/y.output
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: P $end

    1 P: L
    2  | L P

    3 L: S ';'

    4 S: IDN '=' E
    5  | IF C THEN SP
    6  | WHILE C DO S
    7  | '{' P '}'

    8 SP: S
    9   | S ELSE S

   10 C: E CP

   11 CP: '>' E
   12   | '<' E
   13   | '=' E

   14 E: T
   15  | E '+' T
   16  | E '-' T

   17 T: F
   18  | T '*' F
   19  | T '/' F

   20 F: '(' E ')'
   21  | IDN
   22  | INT8
   23  | INT10
   24  | INT16
   25  | FLOAT8
   26  | FLOAT10
   27  | FLOAT16


Terminals, with rules where they appear

$end (0) 0
'(' (40) 20
')' (41) 20
'*' (42) 18
'+' (43) 15
'-' (45) 16
'/' (47) 19
';' (59) 3
'<' (60) 12
'=' (61) 4 13
'>' (62) 11
'{' (123) 7
'}' (125) 7
error (256)
WHILE (258) 6
IF (259) 5
THEN (260) 5
ELSE (261) 9
DO (262) 6
IDN (263) 4 21
INT8 (264) 22
INT10 (265) 23
INT16 (266) 24
FLOAT8 (267) 25
FLOAT10 (268) 26
FLOAT16 (269) 27


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
P (28)
    on left: 1 2, on right: 0 2 7
L (29)
    on left: 3, on right: 1 2
S (30)
    on left: 4 5 6 7, on right: 3 6 8 9
SP (31)
    on left: 8 9, on right: 5
C (32)
    on left: 10, on right: 5 6
CP (33)
    on left: 11 12 13, on right: 10
E (34)
    on left: 14 15 16, on right: 4 10 11 12 13 15 16 20
T (35)
    on left: 17 18 19, on right: 14 15 16 18 19
F (36)
    on left: 20 21 22 23 24 25 26 27, on right: 17 18 19


state 0

    0 $accept: . P $end

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    P  go to state 5
    L  go to state 6
    S  go to state 7


state 1

    6 S: WHILE . C DO S

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    C  go to state 16
    E  go to state 17
    T  go to state 18
    F  go to state 19


state 2

    5 S: IF . C THEN SP

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    C  go to state 20
    E  go to state 17
    T  go to state 18
    F  go to state 19


state 3

    4 S: IDN . '=' E

    '='  shift, and go to state 21


state 4

    7 S: '{' . P '}'

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    P  go to state 22
    L  go to state 6
    S  go to state 7


state 5

    0 $accept: P . $end

    $end  shift, and go to state 23


state 6

    1 P: L .
    2  | L . P

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    $default  reduce using rule 1 (P)

    P  go to state 24
    L  go to state 6
    S  go to state 7


state 7

    3 L: S . ';'

    ';'  shift, and go to state 25


state 8

   21 F: IDN .

    $default  reduce using rule 21 (F)


state 9

   22 F: INT8 .

    $default  reduce using rule 22 (F)


state 10

   23 F: INT10 .

    $default  reduce using rule 23 (F)


state 11

   24 F: INT16 .

    $default  reduce using rule 24 (F)


state 12

   25 F: FLOAT8 .

    $default  reduce using rule 25 (F)


state 13

   26 F: FLOAT10 .

    $default  reduce using rule 26 (F)


state 14

   27 F: FLOAT16 .

    $default  reduce using rule 27 (F)


state 15

   20 F: '(' . E ')'

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    E  go to state 26
    T  go to state 18
    F  go to state 19


state 16

    6 S: WHILE C . DO S

    DO  shift, and go to state 27


state 17

   10 C: E . CP
   15 E: E . '+' T
   16  | E . '-' T

    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '='  shift, and go to state 32

    CP  go to state 33


state 18

   14 E: T .
   18 T: T . '*' F
   19  | T . '/' F

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 14 (E)


state 19

   17 T: F .

    $default  reduce using rule 17 (T)


state 20

    5 S: IF C . THEN SP

    THEN  shift, and go to state 36


state 21

    4 S: IDN '=' . E

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    E  go to state 37
    T  go to state 18
    F  go to state 19


state 22

    7 S: '{' P . '}'

    '}'  shift, and go to state 38


state 23

    0 $accept: P $end .

    $default  accept


state 24

    2 P: L P .

    $default  reduce using rule 2 (P)


state 25

    3 L: S ';' .

    $default  reduce using rule 3 (L)


state 26

   15 E: E . '+' T
   16  | E . '-' T
   20 F: '(' E . ')'

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    ')'  shift, and go to state 39


state 27

    6 S: WHILE C DO . S

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    S  go to state 40


state 28

   12 CP: '<' . E

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    E  go to state 41
    T  go to state 18
    F  go to state 19


state 29

   11 CP: '>' . E

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    E  go to state 42
    T  go to state 18
    F  go to state 19


state 30

   15 E: E '+' . T

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    T  go to state 43
    F  go to state 19


state 31

   16 E: E '-' . T

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    T  go to state 44
    F  go to state 19


state 32

   13 CP: '=' . E

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    E  go to state 45
    T  go to state 18
    F  go to state 19


state 33

   10 C: E CP .

    $default  reduce using rule 10 (C)


state 34

   18 T: T '*' . F

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    F  go to state 46


state 35

   19 T: T '/' . F

    IDN      shift, and go to state 8
    INT8     shift, and go to state 9
    INT10    shift, and go to state 10
    INT16    shift, and go to state 11
    FLOAT8   shift, and go to state 12
    FLOAT10  shift, and go to state 13
    FLOAT16  shift, and go to state 14
    '('      shift, and go to state 15

    F  go to state 47


state 36

    5 S: IF C THEN . SP

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    S   go to state 48
    SP  go to state 49


state 37

    4 S: IDN '=' E .
   15 E: E . '+' T
   16  | E . '-' T

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31

    $default  reduce using rule 4 (S)


state 38

    7 S: '{' P '}' .

    $default  reduce using rule 7 (S)


state 39

   20 F: '(' E ')' .

    $default  reduce using rule 20 (F)


state 40

    6 S: WHILE C DO S .

    $default  reduce using rule 6 (S)


state 41

   12 CP: '<' E .
   15 E: E . '+' T
   16  | E . '-' T

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31

    $default  reduce using rule 12 (CP)


state 42

   11 CP: '>' E .
   15 E: E . '+' T
   16  | E . '-' T

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31

    $default  reduce using rule 11 (CP)


state 43

   15 E: E '+' T .
   18 T: T . '*' F
   19  | T . '/' F

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 15 (E)


state 44

   16 E: E '-' T .
   18 T: T . '*' F
   19  | T . '/' F

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 16 (E)


state 45

   13 CP: '=' E .
   15 E: E . '+' T
   16  | E . '-' T

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31

    $default  reduce using rule 13 (CP)


state 46

   18 T: T '*' F .

    $default  reduce using rule 18 (T)


state 47

   19 T: T '/' F .

    $default  reduce using rule 19 (T)


state 48

    8 SP: S .
    9   | S . ELSE S

    ELSE  shift, and go to state 50

    ELSE      [reduce using rule 8 (SP)]
    $default  reduce using rule 8 (SP)


state 49

    5 S: IF C THEN SP .

    $default  reduce using rule 5 (S)


state 50

    9 SP: S ELSE . S

    WHILE  shift, and go to state 1
    IF     shift, and go to state 2
    IDN    shift, and go to state 3
    '{'    shift, and go to state 4

    S  go to state 51


state 51

    9 SP: S ELSE S .

    $default  reduce using rule 9 (SP)
